# lmw_uav_L1

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/gimbal_control_serial/: GimbalCmd.h
devel/lib/demo_pkg/: talker
devel/lib/gimbal_control_serial/: gimbal_control_node
devel/lib/pkgconfig/: demo_pkg.pc  gimbal_control_serial.pc  sensing.pc
devel/lib/python3/dist-packages/gimbal_control_serial/msg/: _GimbalCmd.py  __init__.py
devel/share/common-lisp/ros/gimbal_control_serial/msg/: GimbalCmd.lisp  _package.lisp  _package_GimbalCmd.lisp  gimbal_control_serial-msg.asd
devel/share/demo_pkg/cmake/: demo_pkgConfig.cmake
devel/share/gennodejs/ros/gimbal_control_serial/msg/: GimbalCmd.js  _index.js
devel/share/gimbal_control_serial/cmake/: gimbal_control_serial-msg-extras.cmake  gimbal_control_serial-msg-paths.cmake  gimbal_control_serialConfig.cmake
devel/share/roseus/ros/gimbal_control_serial/: manifest.l
devel/share/roseus/ros/gimbal_control_serial/msg/: GimbalCmd.l
devel/share/sensing/cmake/: sensingConfig.cmake
src/demo_pkg/: CMakeLists.txt  package.xml
src/demo_pkg/src/: talker.cpp
src/gimbal_control_serial/: CMakeLists.txt
src/gimbal_control_serial/config/: serial.yaml
src/gimbal_control_serial/include/gimbal_control_serial/: gimbal_protocol.hpp  gimbal_serial.hpp
src/gimbal_control_serial/launch/: gimbal_control.launch
src/gimbal_control_serial/msg/: GimbalCmd.msg
src/gimbal_control_serial/src/: gimbal_control_node.cpp  gimbal_protocol.cpp  gimbal_serial.cpp
src/mission_control/: CMakeLists.txt  package.xml
src/msp_interface/: CMakeLists.txt  package.xml
src/msp_interface/config/: serial.yaml
src/msp_interface/include/msp_interface/: msp_parser.h  msp_protocol.h  serial_driver.h
src/msp_interface/launch/: msp_interface.launch
src/msp_interface/msg/: MspChannel.msg  MspSensor.msg
src/msp_interface/src/: mode_manage_node.cpp  msp_interface_node.cpp  msp_parser.cpp  msp_protocol.cpp  serial_driver.cpp
src/remote_info/: CMakeLists.txt  package.xml
src/remote_info/config/: remote_config.yaml
src/remote_info/include/remote_info/: ibus_parser.h  serial_driver.h
src/remote_info/launch/: remote_info.launch
src/remote_info/msg/: Remote.msg
src/remote_info/src/: ibus_parser.cpp  remote_info_node.cpp  serial_driver.cpp
src/sensing/: CMakeLists.txt  package.xml
src/sensing/config/: realsense.yaml
src/sensing/launch/: realsense.launch
src/subtask/: CMakeLists.txt  package.xml
src/subtask/config/: subtask.yaml
src/subtask/launch/: subtask.launch
src/subtask/msg/: ControlData.msg
src/subtask/src/: task_1_base_act.cpp
src/task_manager/: CMakeLists.txt  package.xml
src/task_manager/config/: task_manager.yaml
src/task_manager/launch/: task_manager.launch
src/task_manager/msg/: OrderTask.msg
src/task_manager/src/: task_manager_node.cpp
src/uav_bringup/: CMakeLists.txt  package.xml
src/uav_bringup/launch/: uav_all.launch
