<?xml version="1.0"?>
<package format="2">
  <name>subtask</name>
  <version>0.0.0</version>
  <description>Subtask package for basic control actions</description>

  <maintainer email="mzr@todo.todo">mzr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>task_manager</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>task_manager</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>task_manager</exec_depend>

  <export></export>
</package>